public/styles/header.css
.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 24px;
   margin-bottom: 24px;
}

.header_logo {
   font-size: 32px;
   font-weight: bold;
}

.header_menu {
   display: flex;
   gap: 24px;
}

.header_menu_link {
   text-decoration: none;
   font-size: 16px;
   color: #000;
}

.header_input {
   background-color: #F0F0F0;
   border: none;
   padding: 16px 25px;
   border-radius: 62px;
   width: 40%;
}

.header_icons {
   display: flex;
   gap: 14px;
}

.hero {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 60px 0;
   gap: 40px;


}

.hero_content {
   max-width: 600px;
}

.hero_title {
   font-size: 68px;
   font-weight: 1000;
   line-height: 1;
   margin-bottom: 20px;
   margin-left: 65px;
   display: inline-block;
   transform: scaleY(0.9);
   transform-origin: center;
   letter-spacing: -3px;
}

.hero_text {
   font-size: 16px;
   color: #6b6b6b;
   margin-bottom: 30px;
   margin-left: 65px;
   font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
}

.hero_btn {
   background: black;
   color: white;
   border: none;
   padding: 14px 28px;
   border-radius: 30px;
   font-size: 16px;
   cursor: pointer;
   margin-bottom: 40px;
   margin-left: 65px;
   width: 310;
   height: 102;
   font-family: Noto Sans, sans-serif;
}

.hero_stats {
   display: flex;
   gap: 40px;
   margin-left: 65px;
   font-family: Noto Sans, sans-serif;
   transform: scaleX(0.9);
   transform: scaleY(0.8);
}



.hero_stats h2 {
   font-size: 24px;
   margin-bottom: 5px;
}

.hero_stats p {
   font-size: 14px;
   color: #777;
}

.hero_image img {
   width: 800px;

}


.hero {
   background: url('../img/b26fea69ccfd8aa5825862cdb9604a4fb493046444.jpg') no-repeat right center;
   background-size: contain;
   background-position: 95% center;
   padding: 80px 0;
   min-height: 500px;
   background-color: #f1f1f1;
}




.overlay {
   position: absolute;
   top: 160px;
   right: 50px;
   width: 120px;
   z-index: 10;


   animation: float 3s ease-in-out infinite;
}

@keyframes float {
   0% {
      transform: translateY(0);
   }

   50% {
      transform: translateY(-10px);
   }

   100% {
      transform: translateY(0);
   }
}


.overlay_small {
   width: 60px;
   /* менша */
   top: 370px;
   /* інша позиція */
   right: 580px;
   /* рухай як хочеш */

   animation: float 2s ease-in-out infinite;
}


.brands {
   background: black;
   color: white;
   height: 100px;

   display: flex;
   justify-content: space-around;
   align-items: center;

   padding: 20px 0;
}


.brand:nth-child(1) {
   font-family: 'Playfair Display', serif;
   font-size: 24px;
}

.brand:nth-child(2) {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
}

.brand:nth-child(3) {
   font-family: 'Playfair Display', serif;
   letter-spacing: 2px;
}

.brand:nth-child(4) {
   font-family: 'Playfair Display', serif;
   font-style: italic;
}

.brand:nth-child(5) {
   font-family: cursive;
}


.product-card {
   border: none;
   transition: 0.3s;
}

.product-card img {
   width: 100%;
}

.product-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
}

.price {
   font-weight: bold;
   font-size: 18px;
   display: flex;
   justify-content: flex-start;
}

.card-title {
   font-weight: 450;
   display: flex;
   justify-content: flex-start;
}


.sales-title {
   font-size: 34px;
   margin-bottom: 30px;
   font-weight: bold;
   display: flex;
   justify-content: center;
   transform: scaleY(0.9);
   letter-spacing: -1.5px;
   transform: scaleX(1.2);
}

.all {
   background: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   border: solid 1px rgb(212, 212, 212);
   ;
   padding: 0;
   border-radius: 30px;
   font-size: 16px;
   cursor: pointer;
   margin-bottom: 40px;
   
   width: 218px;
   height: 52px;
   font-family: Noto Sans, sans-serif;

}


.btncenter {
   display: flex;
   justify-content: center;
   align-items: center;
}


.offer {
   background: black;
   color: white;
   height: 38px;
   font-family: 'Inter', sans-serif;
   font-weight: 200;
   transform: scaleY(1);
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 20px 0;
}

.my-line {
  border: none; /* Видаляємо стандартний стиль */
  border-top: 1px solid #525151; /* Додаємо свою лінію: товщина, тип, колір */
  width: 100%; /* Ширина лінії */
  margin: 20px 0; /* Відступи зверху/знизу */
}



.footer {
   background: #111;
   color: white;
   margin-top: 60px;
}

.footer_content {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 40px;
   padding: 50px 0;
}

.footer_logo {
   font-size: 28px;
   margin-bottom: 10px;
}

.footer_text {
   max-width: 300px;
   color: #aaa;
}

.footer_links {
   display: flex;
   gap: 60px;
}

.footer_links h4 {
   margin-bottom: 10px;
}

.footer_links a {
   display: block;
   text-decoration: none;
   color: #aaa;
   margin-bottom: 6px;
   font-size: 14px;
}

.footer_links a:hover {
   color: white;
}

.footer_bottom {
   text-align: center;
   border-top: 1px solid #333;
   padding: 15px 0;
   font-size: 14px;
   color: #aaa;
}  



 

